[package]
name = "deadsync-input-native"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
deadsync-input = { path = "../deadsync-input" }
log = "0.4.32"
winit = "0.30.13"

[target.'cfg(unix)'.dependencies]
libc = "0.2.186"

[target.'cfg(target_os = "freebsd")'.dependencies]
hidparser = "1.0.3"

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.6.0"

[target.'cfg(all(windows, target_vendor = "win7"))'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(all(windows, not(target_vendor = "win7")))'.dependencies]
windows = { version = "0.62.2", features = [
    "Foundation",
    "Foundation_Collections",
    "Gaming",
    "Gaming_Input",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader",
    "Win32_System_WinRT",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[lints.clippy]
perf = { level = "warn", priority = -1 }

inline_always = "allow"
