[package]
name = "deadsync-net"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
ureq = { version = "3.3.0", features = ["cookies", "json", "rustls"] }

[lints.clippy]
perf = { level = "warn", priority = -1 }

inline_always = "allow"
