[package]
name = "deadsync-notefield"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
deadlib-present = { path = "../deadlib-present" }
deadlib-render = { path = "../deadlib-render" }
deadsync-core = { path = "../deadsync-core" }
deadsync-noteskin = { path = "../deadsync-noteskin" }
deadsync-rules = { path = "../deadsync-rules" }
deadsync-theme = { path = "../deadsync-theme" }
glam = "0.33.1"

[lints.clippy]
perf = { level = "warn", priority = -1 }

inline_always = "allow"
