[package]
name = "deadsync-notefield"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[features]
bench-support = []

[[bench]]
name = "hold_mesh"
harness = false
required-features = ["bench-support"]

[[bench]]
name = "placement_plan"
harness = false
required-features = ["bench-support"]

[[bench]]
name = "slot_frame_cache"
harness = false
required-features = ["bench-support"]

[dependencies]
deadlib-present = { path = "../deadlib-present" }
deadlib-render = { path = "../deadlib-render" }
deadsync-core = { path = "../deadsync-core" }
deadsync-gameplay = { path = "../deadsync-gameplay" }
deadsync-noteskin = { path = "../deadsync-noteskin" }
deadsync-rules = { path = "../deadsync-rules" }
deadsync-theme = { path = "../deadsync-theme" }
glam = "0.33.1"
twox-hash = "2.1.2"

[lints.clippy]
perf = { level = "warn", priority = -1 }

inline_always = "allow"
